2008-01-18  Tom Tromey  <tromey@redhat.com>

        * vc-svn.el (vc-svn-dir-status): New function.

2008-01-18  Dan Nicolaescu  <dann@ics.uci.edu>

	* vc.el: Make vc-status asynchronous.
	(vc-update-vc-status-buffer): New function broken out of ...
	(vc-status-refresh): ... here. Pass vc-update-vc-status-buffer to
	the dir-status backend function.

	* vc-hg.el (vc-hg-dir-status): Compute the status asynchronously.
	Move the output processing to ...
	(vc-hg-after-dir-status): ... here.  Call the function passed as
	an argument with the results.

2008-01-18  Stefan Monnier  <monnier@iro.umontreal.ca>

	* doc-view.el (doc-view-pdf/ps->png): Make sure we a have a valid cwd.
	(doc-view-insert-image): Do something if the image is missing.
	(doc-view-mode): Don't use file-remote-p.

2008-01-18  Bastien Guerry  <Bastien.Guerry@ens.fr>

	* textmodes/org-export-latex.el (org-export-latex-cleaned-string): Fix.
	(org-export-latex-special-chars): Convert "..." in \ldots
	and skip tables.
	(org-export-latex-fontify-headline): Change parameter name.
	(org-export-as-latex): Handle export of subtrees.
	(org-export-latex-make-header): New argument TITLE.
	(org-export-latex-content): New argument EXCLUDE-LIST.
	(org-list-parse-list): New name for org-export-latex-parse-list.
	(org-export-latex-make-header): New name for
	org-export-latex-make-preamble.
	(org-list-to-generic): New name of org-export-list-to-generic.
	(org-list-to-latex): New name of org-export-list-to-latex.
	(org-list-item-begin, org-list-end, org-list-insert-radio-list)
	(org-list-send-list, org-list-to-texinfo)
	(org-list-to-html): New functions.
	(org-export-latex-tables-column-borders)
	(org-export-latex-default-class, org-export-latex-classes)
	(org-export-latex-classes-sectioning)
	(org-list-radio-list-templates): New options.
	(org-export-latex-header): New variable.
	(org-latex-entities): New constant.
	(org-export-latex-default-sectioning, org-export-latex-preamble)
	(org-export-latex-prepare-text-option)